--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <div class="head-container">
           <h2><a href="#">Fotoin</a></h2>
           <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Feature</li>
-            <li>Contact</li>
-            <li>Pricing</li>
+             <li><a href="#">Home</a></li>
+             <li><a href="#">About</a></li>
+             <li><a href="#">Feature</a></li>
+             <li><a href="#">Contact</a></li>
+             <li><a href="#">Pricing</a></li>
           </ul>
         </div>
       </div>
