--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
              <li><a href="#">Home</a></li>
              <li><a href="#">About</a></li>
              <li><a href="#">Feature</a></li>
-             <li><a href="#">Contact</a></li>
+             <li><a href="form.html">Contact</a></li>
              <li><a href="#">Pricing</a></li>
           </ul>
         </div>
