--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <link rel="stylesheet" href="assets/style/style.css">
    <!-- ini tambahan untuk animasi sedikit... menggunakan jQuery -->
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
 </head>
 
 <body>
@@ -18,11 +19,11 @@
         <div class="head-container">
           <h2><a href="#">Fotoin</a></h2>
           <ul>
-             <li><a href="#">Home</a></li>
-             <li><a href="#">About</a></li>
-             <li><a href="#">Feature</a></li>
-             <li><a href="form.html">Contact</a></li>
-             <li><a href="#">Pricing</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Feature</a></li>
+            <li><a href="form.html">Contact</a></li>
+            <li><a href="#">Pricing</a></li>
           </ul>
         </div>
       </div>
@@ -41,7 +42,7 @@
       <div class="who-we-are-left">
         <div class="who-we-are-text">
           <h2>Who we are</h2>
-          <p><strong>Fotoin</strong> is a Startups that Works in Photography and Cinematic Videography.
+          <p><strong>Fotoin</strong> is a Startups that Works in Photography ad Cinematic Videography.
            The startups was built in 2019. Up untill now, we have received many awards and our Works
           are acknowledge by the expert community. Our clients are varies and have shown a lots of gratitude towards our services. </p>
         </div>
@@ -57,7 +58,6 @@
    <!-- akhir sintaks bagian 1 -->
 
 
-
    <!-- sintaks bagian 2 -->
 
    <!-- akhir sintaks bagian 2 -->
@@ -65,6 +65,78 @@
 
 
    <!-- sintaks bagian 3 -->
+   <div class="bagian3">
+    <div class="top-wrap">
+   		<div class="container">
+   			<div class="complete-project top">
+   				<p class="top-h2">1,640</p>
+   				<p>Completed projects</p>
+   			</div>
+   			<div class="client top">
+   				<p class="top-h2">200</p>
+   				<p>Client this year</p>
+   			</div>
+   			<div class="photo-edit top">
+   				<p class="top-h2">750</p>
+   				<p>Projects editing</p>
+   			</div>
+   			<div class="design top">
+   				<p class="top-h2">890</p>
+   				<p>Projects design</p>
+   			</div>
+   		</div>
+   	</div>
+   	<div class="testi">
+   		<div class="container cf">
+   			<div class="testi-wrap">
+   				<div class="heading">
+   					<h1>TESTIMONIALS</h1>
+   				</div>
+   				<div class="wrap-box">
+   					<div class="container-box cf">
+   						<img src="assets/image/project.jpg" class="project-img">
+   						<p class="text-box">"Wow,this service provider is very extraordinary. I guarantee you will satisfied if buying their services!"</p>
+   						<p class="name-people">~Steven Shiro~</p>
+   					</div>
+   				</div>
+   			</div>
+   			<div class="satisfaction">
+   				<div class="h3-style">
+   					<h3>Client Satisfaction</h3>
+   				</div>
+   				<div class="rating">
+   					<h1>4.8 <i class="fas fa-star"></i></h1>
+   				</div>
+   				<div class="btn-sm">
+   					<a href="#">Show More</a>
+   				</div>
+   			</div>
+   		</div>
+   	</div>
+   </div>
+   <div class="latest-projet">
+     <div class="latest-project-container">
+       <div class="latest-project-text">
+         <h2>LATEST PROJECT</h2>
+         <ul>
+           <li id="list1" class="list">Show all</li>
+           <li id="list2" class="list">Aesthetic</li>
+           <li id="list3" class="list">Occation</li>
+           <li id="list4" class="list">Nature</li>
+         </ul>
+       </div>
+       <div class="latest-project-img">
+         <img id="latest1" class ="latest" src="assets/image/Latest1.jpg" alt="">
+         <img id="latest2" class ="latest" src="assets/image/Latest2.jpg" alt="">
+         <img id="latest3" class ="latest" src="assets/image/Latest3.jpg" alt="">
+         <img id="latest4" class ="latest" src="assets/image/Latest4.jpg" alt="">
+         <img id="latest5" class ="latest" src="assets/image/Latest5.jpg" alt="">
+         <img id="latest6" class ="latest" src="assets/image/Latest6.jpg" alt="">
+         <img id="latest7" class ="latest" src="assets/image/Latest7.jpg" alt="">
+         <img id="latest8" class ="latest" src="assets/image/Latest8.jpg" alt="">
+       </div>
+     </div>
+   </div>
 
    <!-- akhir sintaks bagian 3 -->
 
