--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Fotoin</title>
    <link rel="stylesheet" href="assets/style/style.css">
+   <link rel="stylesheet" href="assets/style/responsive.css">
    <!-- ini tambahan untuk animasi sedikit... menggunakan jQuery -->
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
@@ -19,11 +20,13 @@
         <div class="head-container">
           <h2><a href="#">Fotoin</a></h2>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Feature</a></li>
-            <li><a href="form.html">Contact</a></li>
-            <li><a href="#">Pricing</a></li>
+            <li class="list-rmv"><a href="#">Home</a></li>
+            <li class="list-rmv"><a href="#">About</a></li>
+            <li class="list-rmv"><a href="#">Feature</a></li>
+            <li class="list-rmv"><a href="form.html">Contact</a></li>
+            <li class="list-rmv"><a href="#">Pricing</a></li>
+            <div id="icon"class="fa fa-bars"></div>
+            <div id="icon-x" class="fa fa-times"></div>
           </ul>
         </div>
       </div>
@@ -45,8 +48,10 @@
           <p><strong>Fotoin</strong> is a Startups that Works in Photography ad Cinematic Videography.
            The startups was built in 2019. Up untill now, we have received many awards and our Works
           are acknowledge by the expert community. Our clients are varies and have shown a lots of gratitude towards our services. </p>
+          <br>
+          <a href="#">Learn More</a>
         </div>
-        <a href="#">Learn More</a>
+
       </div>
       <div class="who-we-are-imgs">
         <img id="img1" src="assets/image/imgFoto.jpg" alt="">
@@ -87,7 +92,7 @@
    		</div>
    	</div>
    	<div class="testi">
-   		<div class="container cf">
+   		<div class="container-cf">
    			<div class="testi-wrap">
    				<div class="heading">
    					<h1>TESTIMONIALS</h1>
