--- a/index.html
+++ b/index.html
@@ -148,7 +148,31 @@
 
 
    <!-- sintaks bagian 4 -->
+   <footer>
+     <div class="footer-container">
+       <div class="left-col">
+         <h1 >Social</h1>
+         <div class="social-media">
+           <a href="#"><i class="fab fa-facebook-f"></i></a>
+           <a href="#"><i class="fab fa-twitter"></i></a>
+           <a href="#"><i class="fab fa-instagram"></i></a>
+           <a href="#"><i class="fab fa-youtube"></i></a>
+         </div>
+         <p class="rights-text">© Created By Fotoin.</p>
+       </div>
 
+       <div class="right-col">
+         <h1 >Pay With</h1>
+         <div class="payment-method">
+           <a href="#"><i class="fab fa-cc-paypal"></i></a>
+           <a href="#"><i class="fab fa-cc-visa"></i></a>
+           <a href="#"><i class="fab fa-bitcoin"></i></a>
+           <a href="#"><i class="fab fa-ethereum"></i></a>
+         </div>
+         <p class="rights-text">More Coming Soon</p>
+       </div>
+     </div>
+   </footer>
    <!-- akhir sintaks bagian 4 -->
    <script type="text/javascript" src="assets/animation/script.js"></script>
 </body>
