--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
    <!-- ini tambahan untuk animasi sedikit... menggunakan jQuery -->
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+   <script rel="preload" type="text/javascript" src="assets/animation/script.js"></script>
 </head>
 
 <body>
@@ -174,7 +175,7 @@
      </div>
    </footer>
    <!-- akhir sintaks bagian 4 -->
-   <script type="text/javascript" src="assets/animation/script.js"></script>
+   
 </body>
 
 </html>
